syntax = "proto3";
package core.v1;
option go_package = "github.com/HuynhHoangPhuc/myrmex/gen/go/core/v1;corev1";

import "core/v1/common.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string role = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string role = 4;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  PaginationRequest pagination = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  PaginationResponse pagination = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string full_name = 3;
  optional string role = 4;
  optional bool is_active = 5;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {}
